Fix word-wrap problem in post content #24

--- a/src/styles/partials/content.scss
+++ b/src/styles/partials/content.scss
@@ -2,6 +2,8 @@
   position: relative;
   color: $text;
   line-height: 1.8;
+  word-wrap: break-word;
+  word-break: break-word;
 
   li + li {
     margin-top: 0.5rem;
